service.yaml
apiVersion: v1
kind: Service
metadata:
  name: starlight-service
  namespace: starlight
  labels:
    app: starlight-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: starlight-app
