ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: starlight-ingress
  namespace: starlight
  labels:
    app: starlight-app
  annotations:
    #kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  tls:
  - hosts:
    - starlight.2nitestarlight.ca
    secretName: starlight-tls
  rules:
  - host: starlight.2nitestarlight.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: starlight-service
            port:
              number: 80
